# game-6000-dice-ai

./: Cargo.toml  Dockerfile  Makefile  README.md  config.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: ai.rs  computer.rs  config.rs  game.rs  human.rs  lib.rs  main.rs  score.rs
src/api/: handlers.rs  mod.rs  models.rs  routes.rs
src/web/static/: index.html
src/web/static/css/: style.css
src/web/static/js/: game.js
tests/: api_tests.rs  computer_tests.rs  game_players.rs  players_tests.rs  score_tests.rs
