[package]
name = "dice6000"
path = "src/lib.rs"
version = "0.1.0"
edition = "2024"
description = "A dice game where Human and AI players aim to reach 6000 points by rolling dice"
readme = "README.md"
repository = "https://github.com/dmachard/game-6000-dice"
license = "MIT"
keywords = ["game", "dice", "cli", "ai"]
categories = ["games"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
colored = "2.0"
textwrap = "0.16.2"

