[package]
name = "dice6000"
version = "0.1.0"
edition = "2024"
description = "A dice game where Human and AI players aim to reach 6000 points by rolling dice"
readme = "README.md"
repository = "https://github.com/dmachard/game-6000-dice"
license = "MIT"
keywords = ["game", "dice", "cli", "ai"]
categories = ["games"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
colored = "3.0"
textwrap = "0.16.2"
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full", "rt-multi-thread"] }
hyper = "1.6.0"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tower = "0.5.2"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
tower = "0.5.2" 
